data/derived/sp14/progs/unify/prog2110.ml.out
Characters 84-86:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type (('a -> 'b) -> 'a -> 'b) list
